--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version= "1", features = ["derive"] }
 chrono = { version = "0.4.6", features = ["serde"] }
 uuid = { version = "0.7.4", features = ["serde", "v4"] }
 domain = { package = "domain", path = "../domain" }
+ring = "0.16.11"
+data-encoding = "2.2.0"
