--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -14,3 +14,4 @@ warp = "0.2.1"
 serde = "1.0.91"
 serde_derive = "1.0.104"
 uuid = { version = "0.7.4", features = ["serde", "v4"] }
+chrono = { version = "0.4.6", features = ["serde"] }
