--- a/ui/package.json
+++ b/ui/package.json
@@ -4,26 +4,36 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.24.0",
+    "@blueprintjs/datetime": "^3.15.2",
     "@blueprintjs/eslint-plugin-blueprint": "^0.1.0",
     "@blueprintjs/select": "^3.12.0",
+    "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/flux": "^3.1.9",
     "@types/jest": "^24.0.0",
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
+    "flux": "^3.1.3",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
+    "work": "yarn watch \"pkill node && yarn start\" ./src",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
